parse.output
Terminals which are not used

   lex_AND
   lex_LBRACK
   lex_RBRACK


State 97 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: dcllist

    2 exp_variable: lex_ID

    3 expression4: lex_INT
    4            | lex_CHAR
    5            | exp_variable
    6            | lex_LPAREN expression lex_RPAREN
    7            | exp_function

    8 expression3: expression4
    9            | expression3 lex_STAR expression4
   10            | expression3 lex_SLASH expression4
   11            | expression3 lex_PERCENT expression4

   12 expression2: expression3
   13            | lex_PLUS expression3
   14            | lex_MINUS expression3
   15            | expression2 lex_PLUS expression3
   16            | expression2 lex_MINUS expression3

   17 expression: expression2
   18           | expression lex_LT expression2
   19           | expression lex_GT expression2
   20           | expression lex_LE expression2
   21           | expression lex_GE expression2
   22           | expression lex_EQ expression2
   23           | expression lex_EQEQ expression2
   24           | expression lex_NE expression2

   25 exp_function: lex_ID lex_LPAREN explist lex_RPAREN

   26 explist: /* empty */
   27        | expression
   28        | explist lex_COMMA expression

   29 statement: st_assign
   30          | lex_LBRACE st_list lex_RBRACE
   31          | st_if
   32          | st_while
   33          | st_return
   34          | st_function

   35 st_assign: exp_variable lex_EQ expression lex_SEMICOLON

   36 st_list: stlist

   37 stlist: /* empty */
   38       | stlist statement

   39 st_if: lex_KW_IF lex_LPAREN expression lex_RPAREN statement
   40      | lex_KW_IF lex_LPAREN expression lex_RPAREN statement lex_KW_ELSE statement

   41 st_while: lex_KW_WHILE lex_LPAREN expression lex_RPAREN statement

   42 st_return: lex_KW_RETURN expression lex_SEMICOLON

   43 st_function: lex_ID lex_LPAREN explist lex_RPAREN lex_SEMICOLON

   44 variable_dcl: type lex_ID

   45 type: lex_KW_INT
   46     | lex_KW_CHAR

   47 function_dcl: type lex_ID lex_LPAREN argument_dcllist lex_RPAREN lex_LBRACE variable_dcllist st_list lex_RBRACE

   48 argument_dcllist: /* empty */
   49                 | variable_dcl
   50                 | argument_dcllist lex_COMMA variable_dcl

   51 variable_dcllist: /* empty */
   52                 | variable_dcllist variable_dcl lex_SEMICOLON

   53 dcllist: /* empty */
   54        | dcllist variable_dcl lex_SEMICOLON
   55        | dcllist function_dcl


Terminals, with rules where they appear

$end (0) 0
error (256)
lex_KW_INT (258) 45
lex_KW_CHAR (259) 46
lex_KW_IF (260) 39 40
lex_KW_ELSE (261) 40
lex_KW_WHILE (262) 41
lex_KW_RETURN (263) 42
lex_PLUS (264) 13 15
lex_MINUS (265) 14 16
lex_STAR (266) 9
lex_SLASH (267) 10
lex_PERCENT (268) 11
lex_AND (269)
lex_EQ (270) 22 35
lex_EQEQ (271) 23
lex_NE (272) 24
lex_LT (273) 18
lex_GT (274) 19
lex_LE (275) 20
lex_GE (276) 21
lex_COMMA (277) 28 50
lex_SEMICOLON (278) 35 42 43 52 54
lex_LPAREN (279) 6 25 39 40 41 43 47
lex_RPAREN (280) 6 25 39 40 41 43 47
lex_LBRACE (281) 30 47
lex_RBRACE (282) 30 47
lex_LBRACK (283)
lex_RBRACK (284)
lex_INT (285) 3
lex_CHAR (286) 4
lex_ID (287) 2 25 43 44 47


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1, on right: 0
exp_variable (35)
    on left: 2, on right: 5 35
expression4 (36)
    on left: 3 4 5 6 7, on right: 8 9 10 11
expression3 (37)
    on left: 8 9 10 11, on right: 9 10 11 12 13 14 15 16
expression2 (38)
    on left: 12 13 14 15 16, on right: 15 16 17 18 19 20 21 22 23 24
expression (39)
    on left: 17 18 19 20 21 22 23 24, on right: 6 18 19 20 21 22 23
    24 27 28 35 39 40 41 42
exp_function (40)
    on left: 25, on right: 7
explist (41)
    on left: 26 27 28, on right: 25 28 43
statement (42)
    on left: 29 30 31 32 33 34, on right: 38 39 40 41
st_assign (43)
    on left: 35, on right: 29
st_list (44)
    on left: 36, on right: 30 47
stlist (45)
    on left: 37 38, on right: 36 38
st_if (46)
    on left: 39 40, on right: 31
st_while (47)
    on left: 41, on right: 32
st_return (48)
    on left: 42, on right: 33
st_function (49)
    on left: 43, on right: 34
variable_dcl (50)
    on left: 44, on right: 49 50 52 54
type (51)
    on left: 45 46, on right: 44 47
function_dcl (52)
    on left: 47, on right: 55
argument_dcllist (53)
    on left: 48 49 50, on right: 47 50
variable_dcllist (54)
    on left: 51 52, on right: 47 52
dcllist (55)
    on left: 53 54 55, on right: 1 54 55


state 0

    0 $accept: . program $end

    $default  reduce using rule 53 (dcllist)

    program  go to state 1
    dcllist  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: dcllist .
   54 dcllist: dcllist . variable_dcl lex_SEMICOLON
   55        | dcllist . function_dcl

    lex_KW_INT   shift, and go to state 4
    lex_KW_CHAR  shift, and go to state 5

    $default  reduce using rule 1 (program)

    variable_dcl  go to state 6
    type          go to state 7
    function_dcl  go to state 8


state 3

    0 $accept: program $end .

    $default  accept


state 4

   45 type: lex_KW_INT .

    $default  reduce using rule 45 (type)


state 5

   46 type: lex_KW_CHAR .

    $default  reduce using rule 46 (type)


state 6

   54 dcllist: dcllist variable_dcl . lex_SEMICOLON

    lex_SEMICOLON  shift, and go to state 9


state 7

   44 variable_dcl: type . lex_ID
   47 function_dcl: type . lex_ID lex_LPAREN argument_dcllist lex_RPAREN lex_LBRACE variable_dcllist st_list lex_RBRACE

    lex_ID  shift, and go to state 10


state 8

   55 dcllist: dcllist function_dcl .

    $default  reduce using rule 55 (dcllist)


state 9

   54 dcllist: dcllist variable_dcl lex_SEMICOLON .

    $default  reduce using rule 54 (dcllist)


state 10

   44 variable_dcl: type lex_ID .
   47 function_dcl: type lex_ID . lex_LPAREN argument_dcllist lex_RPAREN lex_LBRACE variable_dcllist st_list lex_RBRACE

    lex_LPAREN  shift, and go to state 11

    $default  reduce using rule 44 (variable_dcl)


state 11

   47 function_dcl: type lex_ID lex_LPAREN . argument_dcllist lex_RPAREN lex_LBRACE variable_dcllist st_list lex_RBRACE

    lex_KW_INT   shift, and go to state 4
    lex_KW_CHAR  shift, and go to state 5

    $default  reduce using rule 48 (argument_dcllist)

    variable_dcl      go to state 12
    type              go to state 13
    argument_dcllist  go to state 14


state 12

   49 argument_dcllist: variable_dcl .

    $default  reduce using rule 49 (argument_dcllist)


state 13

   44 variable_dcl: type . lex_ID

    lex_ID  shift, and go to state 15


state 14

   47 function_dcl: type lex_ID lex_LPAREN argument_dcllist . lex_RPAREN lex_LBRACE variable_dcllist st_list lex_RBRACE
   50 argument_dcllist: argument_dcllist . lex_COMMA variable_dcl

    lex_COMMA   shift, and go to state 16
    lex_RPAREN  shift, and go to state 17


state 15

   44 variable_dcl: type lex_ID .

    $default  reduce using rule 44 (variable_dcl)


state 16

   50 argument_dcllist: argument_dcllist lex_COMMA . variable_dcl

    lex_KW_INT   shift, and go to state 4
    lex_KW_CHAR  shift, and go to state 5

    variable_dcl  go to state 18
    type          go to state 13


state 17

   47 function_dcl: type lex_ID lex_LPAREN argument_dcllist lex_RPAREN . lex_LBRACE variable_dcllist st_list lex_RBRACE

    lex_LBRACE  shift, and go to state 19


state 18

   50 argument_dcllist: argument_dcllist lex_COMMA variable_dcl .

    $default  reduce using rule 50 (argument_dcllist)


state 19

   47 function_dcl: type lex_ID lex_LPAREN argument_dcllist lex_RPAREN lex_LBRACE . variable_dcllist st_list lex_RBRACE

    $default  reduce using rule 51 (variable_dcllist)

    variable_dcllist  go to state 20


state 20

   47 function_dcl: type lex_ID lex_LPAREN argument_dcllist lex_RPAREN lex_LBRACE variable_dcllist . st_list lex_RBRACE
   52 variable_dcllist: variable_dcllist . variable_dcl lex_SEMICOLON

    lex_KW_INT   shift, and go to state 4
    lex_KW_CHAR  shift, and go to state 5

    $default  reduce using rule 37 (stlist)

    st_list       go to state 21
    stlist        go to state 22
    variable_dcl  go to state 23
    type          go to state 13


state 21

   47 function_dcl: type lex_ID lex_LPAREN argument_dcllist lex_RPAREN lex_LBRACE variable_dcllist st_list . lex_RBRACE

    lex_RBRACE  shift, and go to state 24


state 22

   36 st_list: stlist .
   38 stlist: stlist . statement

    lex_KW_IF      shift, and go to state 25
    lex_KW_WHILE   shift, and go to state 26
    lex_KW_RETURN  shift, and go to state 27
    lex_LBRACE     shift, and go to state 28
    lex_ID         shift, and go to state 29

    $default  reduce using rule 36 (st_list)

    exp_variable  go to state 30
    statement     go to state 31
    st_assign     go to state 32
    st_if         go to state 33
    st_while      go to state 34
    st_return     go to state 35
    st_function   go to state 36


state 23

   52 variable_dcllist: variable_dcllist variable_dcl . lex_SEMICOLON

    lex_SEMICOLON  shift, and go to state 37


state 24

   47 function_dcl: type lex_ID lex_LPAREN argument_dcllist lex_RPAREN lex_LBRACE variable_dcllist st_list lex_RBRACE .

    $default  reduce using rule 47 (function_dcl)


state 25

   39 st_if: lex_KW_IF . lex_LPAREN expression lex_RPAREN statement
   40      | lex_KW_IF . lex_LPAREN expression lex_RPAREN statement lex_KW_ELSE statement

    lex_LPAREN  shift, and go to state 38


state 26

   41 st_while: lex_KW_WHILE . lex_LPAREN expression lex_RPAREN statement

    lex_LPAREN  shift, and go to state 39


state 27

   42 st_return: lex_KW_RETURN . expression lex_SEMICOLON

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 49
    expression    go to state 50
    exp_function  go to state 51


state 28

   30 statement: lex_LBRACE . st_list lex_RBRACE

    $default  reduce using rule 37 (stlist)

    st_list  go to state 52
    stlist   go to state 22


state 29

    2 exp_variable: lex_ID .
   43 st_function: lex_ID . lex_LPAREN explist lex_RPAREN lex_SEMICOLON

    lex_LPAREN  shift, and go to state 53

    $default  reduce using rule 2 (exp_variable)


state 30

   35 st_assign: exp_variable . lex_EQ expression lex_SEMICOLON

    lex_EQ  shift, and go to state 54


state 31

   38 stlist: stlist statement .

    $default  reduce using rule 38 (stlist)


state 32

   29 statement: st_assign .

    $default  reduce using rule 29 (statement)


state 33

   31 statement: st_if .

    $default  reduce using rule 31 (statement)


state 34

   32 statement: st_while .

    $default  reduce using rule 32 (statement)


state 35

   33 statement: st_return .

    $default  reduce using rule 33 (statement)


state 36

   34 statement: st_function .

    $default  reduce using rule 34 (statement)


state 37

   52 variable_dcllist: variable_dcllist variable_dcl lex_SEMICOLON .

    $default  reduce using rule 52 (variable_dcllist)


state 38

   39 st_if: lex_KW_IF lex_LPAREN . expression lex_RPAREN statement
   40      | lex_KW_IF lex_LPAREN . expression lex_RPAREN statement lex_KW_ELSE statement

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 49
    expression    go to state 55
    exp_function  go to state 51


state 39

   41 st_while: lex_KW_WHILE lex_LPAREN . expression lex_RPAREN statement

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 49
    expression    go to state 56
    exp_function  go to state 51


state 40

   13 expression2: lex_PLUS . expression3

    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 57
    exp_function  go to state 51


state 41

   14 expression2: lex_MINUS . expression3

    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 58
    exp_function  go to state 51


state 42

    6 expression4: lex_LPAREN . expression lex_RPAREN

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 49
    expression    go to state 59
    exp_function  go to state 51


state 43

    3 expression4: lex_INT .

    $default  reduce using rule 3 (expression4)


state 44

    4 expression4: lex_CHAR .

    $default  reduce using rule 4 (expression4)


state 45

    2 exp_variable: lex_ID .
   25 exp_function: lex_ID . lex_LPAREN explist lex_RPAREN

    lex_LPAREN  shift, and go to state 60

    $default  reduce using rule 2 (exp_variable)


state 46

    5 expression4: exp_variable .

    $default  reduce using rule 5 (expression4)


state 47

    8 expression3: expression4 .

    $default  reduce using rule 8 (expression3)


state 48

    9 expression3: expression3 . lex_STAR expression4
   10            | expression3 . lex_SLASH expression4
   11            | expression3 . lex_PERCENT expression4
   12 expression2: expression3 .

    lex_STAR     shift, and go to state 61
    lex_SLASH    shift, and go to state 62
    lex_PERCENT  shift, and go to state 63

    $default  reduce using rule 12 (expression2)


state 49

   15 expression2: expression2 . lex_PLUS expression3
   16            | expression2 . lex_MINUS expression3
   17 expression: expression2 .

    lex_PLUS   shift, and go to state 64
    lex_MINUS  shift, and go to state 65

    $default  reduce using rule 17 (expression)


state 50

   18 expression: expression . lex_LT expression2
   19           | expression . lex_GT expression2
   20           | expression . lex_LE expression2
   21           | expression . lex_GE expression2
   22           | expression . lex_EQ expression2
   23           | expression . lex_EQEQ expression2
   24           | expression . lex_NE expression2
   42 st_return: lex_KW_RETURN expression . lex_SEMICOLON

    lex_EQ         shift, and go to state 66
    lex_EQEQ       shift, and go to state 67
    lex_NE         shift, and go to state 68
    lex_LT         shift, and go to state 69
    lex_GT         shift, and go to state 70
    lex_LE         shift, and go to state 71
    lex_GE         shift, and go to state 72
    lex_SEMICOLON  shift, and go to state 73


state 51

    7 expression4: exp_function .

    $default  reduce using rule 7 (expression4)


state 52

   30 statement: lex_LBRACE st_list . lex_RBRACE

    lex_RBRACE  shift, and go to state 74


state 53

   43 st_function: lex_ID lex_LPAREN . explist lex_RPAREN lex_SEMICOLON

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    $default  reduce using rule 26 (explist)

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 49
    expression    go to state 75
    exp_function  go to state 51
    explist       go to state 76


state 54

   35 st_assign: exp_variable lex_EQ . expression lex_SEMICOLON

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 49
    expression    go to state 77
    exp_function  go to state 51


state 55

   18 expression: expression . lex_LT expression2
   19           | expression . lex_GT expression2
   20           | expression . lex_LE expression2
   21           | expression . lex_GE expression2
   22           | expression . lex_EQ expression2
   23           | expression . lex_EQEQ expression2
   24           | expression . lex_NE expression2
   39 st_if: lex_KW_IF lex_LPAREN expression . lex_RPAREN statement
   40      | lex_KW_IF lex_LPAREN expression . lex_RPAREN statement lex_KW_ELSE statement

    lex_EQ      shift, and go to state 66
    lex_EQEQ    shift, and go to state 67
    lex_NE      shift, and go to state 68
    lex_LT      shift, and go to state 69
    lex_GT      shift, and go to state 70
    lex_LE      shift, and go to state 71
    lex_GE      shift, and go to state 72
    lex_RPAREN  shift, and go to state 78


state 56

   18 expression: expression . lex_LT expression2
   19           | expression . lex_GT expression2
   20           | expression . lex_LE expression2
   21           | expression . lex_GE expression2
   22           | expression . lex_EQ expression2
   23           | expression . lex_EQEQ expression2
   24           | expression . lex_NE expression2
   41 st_while: lex_KW_WHILE lex_LPAREN expression . lex_RPAREN statement

    lex_EQ      shift, and go to state 66
    lex_EQEQ    shift, and go to state 67
    lex_NE      shift, and go to state 68
    lex_LT      shift, and go to state 69
    lex_GT      shift, and go to state 70
    lex_LE      shift, and go to state 71
    lex_GE      shift, and go to state 72
    lex_RPAREN  shift, and go to state 79


state 57

    9 expression3: expression3 . lex_STAR expression4
   10            | expression3 . lex_SLASH expression4
   11            | expression3 . lex_PERCENT expression4
   13 expression2: lex_PLUS expression3 .

    lex_STAR     shift, and go to state 61
    lex_SLASH    shift, and go to state 62
    lex_PERCENT  shift, and go to state 63

    $default  reduce using rule 13 (expression2)


state 58

    9 expression3: expression3 . lex_STAR expression4
   10            | expression3 . lex_SLASH expression4
   11            | expression3 . lex_PERCENT expression4
   14 expression2: lex_MINUS expression3 .

    lex_STAR     shift, and go to state 61
    lex_SLASH    shift, and go to state 62
    lex_PERCENT  shift, and go to state 63

    $default  reduce using rule 14 (expression2)


state 59

    6 expression4: lex_LPAREN expression . lex_RPAREN
   18 expression: expression . lex_LT expression2
   19           | expression . lex_GT expression2
   20           | expression . lex_LE expression2
   21           | expression . lex_GE expression2
   22           | expression . lex_EQ expression2
   23           | expression . lex_EQEQ expression2
   24           | expression . lex_NE expression2

    lex_EQ      shift, and go to state 66
    lex_EQEQ    shift, and go to state 67
    lex_NE      shift, and go to state 68
    lex_LT      shift, and go to state 69
    lex_GT      shift, and go to state 70
    lex_LE      shift, and go to state 71
    lex_GE      shift, and go to state 72
    lex_RPAREN  shift, and go to state 80


state 60

   25 exp_function: lex_ID lex_LPAREN . explist lex_RPAREN

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    $default  reduce using rule 26 (explist)

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 49
    expression    go to state 75
    exp_function  go to state 51
    explist       go to state 81


state 61

    9 expression3: expression3 lex_STAR . expression4

    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 82
    exp_function  go to state 51


state 62

   10 expression3: expression3 lex_SLASH . expression4

    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 83
    exp_function  go to state 51


state 63

   11 expression3: expression3 lex_PERCENT . expression4

    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 84
    exp_function  go to state 51


state 64

   15 expression2: expression2 lex_PLUS . expression3

    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 85
    exp_function  go to state 51


state 65

   16 expression2: expression2 lex_MINUS . expression3

    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 86
    exp_function  go to state 51


state 66

   22 expression: expression lex_EQ . expression2

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 87
    exp_function  go to state 51


state 67

   23 expression: expression lex_EQEQ . expression2

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 88
    exp_function  go to state 51


state 68

   24 expression: expression lex_NE . expression2

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 89
    exp_function  go to state 51


state 69

   18 expression: expression lex_LT . expression2

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 90
    exp_function  go to state 51


state 70

   19 expression: expression lex_GT . expression2

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 91
    exp_function  go to state 51


state 71

   20 expression: expression lex_LE . expression2

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45

    exp_variable  go to state 46
    expression4   go to state 47
    expression3   go to state 48
    expression2   go to state 92
    exp_function  go to state 51


state 72

   21 expression: expression lex_GE . expression2

    lex_PLUS    shift, and go to state 40
    lex_MINUS   shift, and go to state 41
    lex_LPAREN  shift, and go to state 42
    lex_INT     shift, and go to state 43
    lex_CHAR    shift, and go to state 44
    lex_ID      shift, and go to state 45
